--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@
 #spring.datasource.username=ADCIONE SEU USUARIO
 #spring.datasource.password=ADICIONE SENHA
 
+#Local DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/vteste
+spring.datasource.username=dhirajprakash
+spring.datasource.password=dhirajprakash
+
 
 
 
